Changed images for how it works section

--- a/platform.html
+++ b/platform.html
@@ -127,7 +127,8 @@
                                 <h2> Sports Stars Inspiration Day</h2>
                                 <h5>Helping develop PE and Sport through <br>Inspiration,
                                     Aspiration and Engagement.</h5>
-                                <button class="button--primary" href="#host_event" data-toggle="modal">Host event</button>
+                                <button class="button--primary" href="#host_event" data-toggle="modal">Host event
+                                </button>
                             </div>
                             <div class="container oiddown">
 
@@ -307,66 +308,87 @@
             <div class="col-md-6 col-md-offset-1">
                 <div class="how_it_works_right">
                     <div id="tab-1" class="vertical_tab-content current">
-                        <h6>Schools and PE teachers web app</h6>
-                        <p>
-                            • See your children personalised fixtures calendar <br>
-                            • See games results and match reports in real time <br>
-                            • See your children performance in their favourite sports<br>
-                            • Get notified about last minutes changes<br>
-                            • Send availability reports and replay consent requests anytime, anywhere<br>
-                            • Communicate with school PE staff and other parents
-                        </p>
+                        <div class="text">
+                            <h6>Schools and PE teachers web app</h6>
+                            <p>
+                                • See your children personalised fixtures calendar <br>
+                                • See games results and match reports in real time <br>
+                                • See your children performance in their favourite sports<br>
+                                • Get notified about last minutes changes<br>
+                                • Send availability reports and replay consent requests anytime, anywhere<br>
+                                • Communicate with school PE staff and other parents
+                            </p>
+                        </div>
+                        <div class="img-wrapper">
+                            <img src="src/image/slide2_devices.png"/>
+                        </div>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
-                        <h6>Schools public web site and big screen</h6>
-                        <p>
-                            • Modern design, photo gallery on the landing page<br>
-                            • Highlighted events in the focus<br>
-                            • School sport news<br>
-                            • All pupils details are hidden for data privacy<br>
-                            • School fixtures calendar, games results, reports and photos are published automatically
-                        </p>
+                        <div class="text">
+                            <h6>Schools public web site and big screen</h6>
+                            <p>
+                                • Modern design, photo gallery on the landing page<br>
+                                • Highlighted events in the focus<br>
+                                • School sport news<br>
+                                • All pupils details are hidden for data privacy<br>
+                                • School fixtures calendar, games results, reports and photos are published
+                                automatically
+                            </p>
+                        </div>
+                        <img src="src/image/how_it_works_2.jpg"/>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
-                        <h6>Schools PE staff mobile app</h6>
-                        <p>
-                            • See your school fixtures calendar<br>
-                            • Input games results and match reports from pitches<br>
-                            • See pupils emergency contacts even when out of the internet connection<br>
-                            • Get notified about pupils unavailability to take part<br>
-                            • Send notifications parents and students about last minutes changes
-                        </p>
+                        <div class="text">
+                            <h6>Schools PE staff mobile app</h6>
+                            <p>
+                                • See your school fixtures calendar<br>
+                                • Input games results and match reports from pitches<br>
+                                • See pupils emergency contacts even when out of the internet connection<br>
+                                • Get notified about pupils unavailability to take part<br>
+                                • Send notifications parents and students about last minutes changes
+                            </p>
+                        </div>
+                        <img src="src/image/how_it_works_3.jpg"/>
                     </div>
                     <div id="tab-4" class="vertical_tab-content">
-                        <h6>Parents and students mobile app</h6>
-                        <p>
-                            • See personalised fixtures calendar<br>
-                            • See games results and match reports in real time<br>
-                            • Track the performance in favourite sports<br>
-                            • Get notified about last minutes changes<br>
-                            • Send availability reports and replay consent requests anytime, anywhere<br>
-                            • Communicate with school PE staff and other parents and students
-                        </p>
+                        <div class="text">
+                            <h6>Parents and students mobile app</h6>
+                            <p>
+                                • See personalised fixtures calendar<br>
+                                • See games results and match reports in real time<br>
+                                • Track the performance in favourite sports<br>
+                                • Get notified about last minutes changes<br>
+                                • Send availability reports and replay consent requests anytime, anywhere<br>
+                                • Communicate with school PE staff and other parents and students
+                            </p>
+                        </div>
+                        <img src="src/image/how_it_works_4.jpg"/>
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
-                        <h6>Tournaments and events web site</h6>
-                        <p>
-                            • Well-designed groups results and finals pages<br>
-                            • Games results presented automatically once submitted<br>
-                            • Dedicated web-site for each event hosted on Squad In Touch servers for free<br>
-                            • Detailed results for each school which participated<br>
-                            • Printable and email-adjusted PDFs with overall tournament results
-                        </p>
+                        <div class="text">
+                            <h6>Tournaments and events web site</h6>
+                            <p>
+                                • Well-designed groups results and finals pages<br>
+                                • Games results presented automatically once submitted<br>
+                                • Dedicated web-site for each event hosted on Squad In Touch servers for free<br>
+                                • Detailed results for each school which participated<br>
+                                • Printable and email-adjusted PDFs with overall tournament results
+                            </p>
+                        </div>
+                        <img src="src/image/how_it_works_5.jpg"/>
                     </div>
                     <div id="tab-6" class="vertical_tab-content">
-                        <h6>Schools sports partnerships web site</h6>
-                        <p>
-                            • Modern design, photo gallery on the landing page<br>
-                            • Seasonal tables are published automatically once games results are submitted<br>
-                            • Highlighted events in the focus<br>
-                            • SSP sport news<br>
-                            • Dedicated web-site for each event hosted on Squad In Touch servers for free
-                        </p>
+                        <div class="text">
+                            <h6>Schools sports partnerships web site</h6>
+                            <p>
+                                • Modern design, photo gallery on the landing page<br>
+                                • Seasonal tables are published automatically once games results are submitted<br>
+                                • Highlighted events in the focus<br>
+                                • SSP sport news<br>
+                                • Dedicated web-site for each event hosted on Squad In Touch servers for free
+                            </p>
+                        </div>
+                        <img src="src/image/how_it_works_6.jpg">
                     </div>
                 </div>
             </div>
