--- a/platform.html
+++ b/platform.html
@@ -91,7 +91,7 @@
                         <div class="slider_content-top">
                             <h3>
                                 Kids and youth sports development platform
-                                supported by the team of Olympians.
+                                supported by the team of Olympians. <br class="hidden-xs">
                                 Make sport fun again.
                             </h3>
 
