Changed slide text

--- a/platform.html
+++ b/platform.html
@@ -127,22 +127,23 @@
                                 <h2> Sports Stars Inspiration Day</h2>
                                 <h5>Helping develop PE and Sport through <br>Inspiration,
                                     Aspiration and Engagement.</h5>
-                                <button class="button--primary" href="#host_event" data-toggle="modal">Host event
+                                <button class="button--primary" href="#host_event" data-toggle="modal">Event Enquiry
                                 </button>
                             </div>
                             <div class="container oiddown">
 
-                                <div>“Our Olympian was fantastic and really engaged the students on a level
-                                    they could relate to. He made them laugh and also drew “them into the
-                                    story of his journey to success via different“ obstacles including injury.
-                                    We would love to have him back!”
+                                <div>“Brendan gave an inspirational assembly to students in Years 7 and 8 during
+                                    which he gave invaluable advice about how to set goals,
+                                    dream big and work hard, even in the face of adversity.
+                                    Brendan then spent time working with them on a variety of different physical
+                                    activities throughout the day.”
                                 </div>
 
                                 <div class="bold_text">
-                                    Jacqui Ferris
+                                    Matt Bowden
                                 </div>
                                 <div>
-                                    Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                                    PE Teacher William Edwards School, Essex
                                 </div>
                             </div>
                         </div>
@@ -519,22 +520,23 @@
                         <h2> Sports Stars Inspiration Day</h2>
                         <h5>Helping develop PE and Sport through <br>Inspiration,
                             Aspiration and Engagement.</h5>
-                        <button class="button--primary" href="#host_event" data-toggle="modal">Host event
+                        <button class="button--primary" href="#host_event" data-toggle="modal">Event Enquiry
                         </button>
                     </div>
                     <div class="container oiddown">
 
-                        <div>“Our Olympian was fantastic and really engaged the students on a level
-                            they could relate to. He made them laugh and also drew “them into the
-                            story of his journey to success via different“ obstacles including injury.
-                            We would love to have him back!”
+                        <div>“Brendan gave an inspirational assembly to students in Years 7 and 8 during
+                            which he gave invaluable advice about how to set goals,
+                            dream big and work hard, even in the face of adversity.
+                            Brendan then spent time working with them on a variety of different physical
+                            activities throughout the day.”
                         </div>
 
                         <div class="bold_text">
-                            Jacqui Ferris
+                            Matt Bowden
                         </div>
                         <div>
-                            Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                            PE Teacher William Edwards School, Essex
                         </div>
 
                     </div>
