--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     <li class="main-menu-item active">
                                         <a href="#myModal"
                                            class="collapse"
-                                           data-toggle="modal">Host event</a>
+                                           data-toggle="modal">Event Enquiry</a>
                                     </li>
                                 </ul>
                             </div>
@@ -89,22 +89,23 @@
                                         <h5 class="hidden-xs">Helping develop PE and Sport through <br>Inspiration,
                                             Aspiration and Engagement.</h5>
                                         <a href="#myModal" data-toggle="modal">
-                                            <button class="button--primary">Host event</button>
+                                            <button class="button--primary">Event Enquiry</button>
                                         </a>
                                     </div>
                                     <div class="container oiddown hidden-xs">
 
-                                        <div>“Our Olympian was fantastic and really engaged the students on a level
-                                            they could relate to. He made them laugh and also drew “them into the
-                                            story of his journey to success via different“ obstacles including injury.
-                                            We would love to have him back!”
+                                        <div>“Brendan gave an inspirational assembly to students in Years 7 and 8 during
+                                            which he gave invaluable advice about how to set goals,
+                                            dream big and work hard, even in the face of adversity.
+                                            Brendan then spent time working with them on a variety of different physical
+                                            activities throughout the day.”
                                         </div>
 
                                         <div class="bold_text">
-                                            Jacqui Ferris
+                                            Matt Bowden
                                         </div>
                                         <div>
-                                            Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                                            PE Teacher William Edwards School, Essex
                                         </div>
 
                                     </div>
