--- a/platform.html
+++ b/platform.html
@@ -61,7 +61,7 @@
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#how_it_works">How it
                                         works</a></li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li class="main-menu-item active"><a class="smooth_scroll" href="#">Join for
+                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com">Join for
                                         free</a>
                                     </li>
                                 </ul>
