--- a/platform.html
+++ b/platform.html
@@ -106,7 +106,7 @@
                                 "Squad in Touch provides everything we need to organise school teams and clubs easily.
                                 Anything that is not a feature can be sorted out effectively and the support we have
                                 been
-                                given setting this up has been great... <a href="#">Read more</a>
+                                given setting this up has been great... <a href="#platform_read_more" data-toggle="modal">Read more</a>
                             </p>
 
                             <p>
@@ -689,6 +689,36 @@
         </div>
     </div>
 </div>
+
+<!--SLIDER READ MORE-->
+<div id="platform_read_more" class="modal fade">
+    <div class="modal-center" data-dismiss="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- Заголовок модального окна -->
+                <div class="modal-header sportsmen_modal-header">
+                    <button type="button" class="close close-popup" data-dismiss="modal"
+                            aria-hidden="true">
+                    </button>
+                    <h4 class="modal-title">Testimonial</h4>
+                </div>
+                <!-- Основное содержимое модального окна -->
+                <div class="testimonials-title sportsmens_title">
+                    <h4>Sir John Talbot's School</h4></div>
+                <div class="sportsmens_modal-biography">"Squad in Touch provides everything we need to organise school teams and clubs easily.
+                    Anything that is not a feature can be sorted out effectively and the support we have
+                    been
+                    given setting this up has been great...
+                    <br/>
+                    <br>— Jack Brown, Subject Leader for PE, Sir John Talbot's School
+                </div>
+                <!-- Футер модального окна -->
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--./MODAL WINDOWS-->
 
 <script src="dist/app.js" type="text/javascript"></script>
