Not use readmore

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                         Make sport fun again.
                                     </h3>
 
-                                    <a href="https://app.squadintouch.com">
+                                    <a href="https://app.squadintouch.com" target="_blank">
                                         <button class="button--primary">Sign up / Sign in</button>
                                     </a>
                                 </div>
@@ -158,13 +158,12 @@
                                 <div class="slider_content-bottom hidden-xs">
 
                                     <p>
-                                        "Squad in Touch provides everything we need to organise school teams and clubs
-                                        easily.
-                                        Anything that is not a feature can be sorted out effectively and the support we
-                                        have
-                                        been
-                                        given setting this up has been great... <a href="#platform_read_more"
-                                                                                   data-toggle="modal">Read more</a>
+                                        "Squad in Touch provides everything we need to organise school teams and clubs easily.
+                                        Anything that is not a feature can be sorted out effectively and the support
+                                        we have been given setting this up has been great.
+                                        This really is one of the best platforms out there to promote school sport and the time
+                                        saving potential alone is worth the subscription fee"
+                                        <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                                     </p>
 
                                     <p>
@@ -732,7 +731,7 @@
                 <h1 class="subscribe-text2">Subscribe now to get 30% discount</h1>
             </div>
             <div class="col-md-12 subscribe-button-padding">
-                <button class="button--default subscribe-button" href="#myModal" data-toggle="modal">Host event</button>
+                <button class="button--default subscribe-button" href="#myModal" data-toggle="modal">Event Enquiry</button>
             </div>
         </div>
     </div>
@@ -897,7 +896,7 @@
                     Make sport fun again.
                 </h3>
 
-                <a href="https://app.squadintouch.com">
+                <a href="https://app.squadintouch.com" target="_blank">
                     <button class="button--primary">Sign up / Sign in</button>
                 </a>
             </div>
@@ -906,10 +905,11 @@
 
                 <p>
                     "Squad in Touch provides everything we need to organise school teams and clubs easily.
-                    Anything that is not a feature can be sorted out effectively and the support we have
-                    been
-                    given setting this up has been great... <a href="#platform_read_more" data-toggle="modal">Read
-                    more</a>
+                    Anything that is not a feature can be sorted out effectively and the support
+                    we have been given setting this up has been great.
+                    This really is one of the best platforms out there to promote school sport and the time
+                    saving potential alone is worth the subscription fee"
+                    <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                 </p>
 
                 <p>
