--- a/platform.html
+++ b/platform.html
@@ -95,7 +95,7 @@
                                 Make sport fun again.
                             </h3>
 
-                            <a href="https://app.squadintouch.com">
+                            <a href="https://app.squadintouch.com" target="_blank">
                                 <button class="button--primary">Sign up / Sign in</button>
                             </a>
                         </div>
@@ -104,9 +104,11 @@
 
                             <p>
                                 "Squad in Touch provides everything we need to organise school teams and clubs easily.
-                                Anything that is not a feature can be sorted out effectively and the support we have
-                                been
-                                given setting this up has been great... <a href="#platform_read_more" data-toggle="modal">Read more</a>
+                                Anything that is not a feature can be sorted out effectively and the support
+                                we have been given setting this up has been great.
+                                This really is one of the best platforms out there to promote school sport and the time
+                                saving potential alone is worth the subscription fee"
+                                <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                             </p>
 
                             <p>
