--- a/index.html
+++ b/index.html
@@ -770,16 +770,20 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-2 testimonial-school-section">
-                                    <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
+                                    <img class="testimonial-school" src="src/image/WE_blazon.png" alt="William Edwards"/>
                                 </div>
                                 <div class="col-md-4 testimonial-info">
                                     <div class="testimonials-title">
-                                        <h4>Sir John Barrow Primary School</h4></div>
-                                    <div>He was very flexible with how we could make it more challenging for KS2 and his
-                                        sessions linked
-                                        perfectly to the PE curriculum and Multi-Skills.
+                                        <h4>William Edwards School</h4></div>
+                                    <div>“Brendan gave an inspirational assembly to students in Years 7 and 8
+                                        during
+                                        which he gave invaluable advice about how to set goals,
+                                        dream big and work hard, even in the face of adversity.
+                                        Brendan then spent time working with them on a variety of different
+                                        physical
+                                        activities throughout the day.”
                                         <br/>
-                                        <br>— James Maher, Teacher
+                                        <br>— Matt Bowden, PE Teacher
                                     </div>
                                 </div>
                                 <div class="col-md-3 testimonial-picture-padding">
@@ -801,20 +805,19 @@
                     <div class="container">
                         <div class="row school2-margin">
                             <div class="col-md-2 testimonial-school-section">
-                                <img class="testimonial-school" src="src/image/school2.jpg" alt="reily"/>
+                                <img class="testimonial-school" src="src/image/WH_blazon.png" alt="WH"/>
                             </div>
                             <div class="col-md-4 testimonial-info">
                                 <div class="testimonials-title">
-                                    <h4>Alton Placholder School</h4></div>
-                                <div>"Brendan spoke with enthusiasm and conviction about his own personal journey to
-                                    being
-                                    the best he
-                                    could be, and both the children and staff were captivated. He kept everyone engaged
-                                    through his
-                                    honesty, the details in his stories, and his humour… <span><a
-                                            href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>
+                                    <h4>Woodhey High School</h4></div>
+                                <div>"Brendan delivered a personal engaging motivational and humorous speech to our
+                                    GCSE pupils. He reinforced the school values of resilience and pushing yourself
+                                    to be the best version of you. The pupils enjoyed the activities that were delivered
+                                    and the serious element of his message was well received."
+                                    <!--<span><a-->
+                                            <!--href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>-->
                                     <br/>
-                                    <br>— Robert Knight, School Director
+                                    <br>— Olivia Williams, PE Teacher.
                                 </div>
                             </div>
                             <div class="col-md-3 testimonial-picture-padding">
