--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="sportsmens_bio">
                         <div class="star_title">
                             <h6 class="sportsmen_subheader"><span class="fontbold">Brendan Reilly</span>
-                                <br>Double Olympian, qualified PE teacher
+                                <br>Double Olympian, Qualified PE Teacher
                                 and Dad of 3 sports mad kids</br></h6>
                         </div>
                         <div class="sportsmens_biography">Brendan wears many hats when it comes to sports development.
@@ -566,7 +566,7 @@
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
                                                 <h6 class="sportsmen_subheader"><span class="fontbold">Jo Mersh</span>
-                                                    <br>Olympian and World Indoor Medalist</br></h6>
+                                                    <br>Olympian and World Indoor Medallist</br></h6>
                                             </div>
                                             <div class="sportsmens_biography">Jo excelled on the track whilst
                                                 developing her career as a
@@ -632,7 +632,7 @@
                                                 <h6 class="sportsmen_subheader"><span
                                                         class="fontbold">Martyn Bernard</span>
                                                     <br>One of the most successful British
-                                                    High Jumper ever</br></h6>
+                                                    High Jumpers ever</br></h6>
                                             </div>
                                             <div class="sportsmens_biography">An Olympic Finalist, European and
                                                 Commonwealth Games Medallist
