Fixed olimpic section

--- a/index.html
+++ b/index.html
@@ -292,22 +292,20 @@
                                 <div class="col-md-6">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/michaela.jpg"
+                                            <img class="photo_size" src="src/image/toby.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="sportsmens_title">
                                                 <h6 class="sportsmen_subheader"><span
-                                                        class="fontbold">Michaela Breeze</span>
-                                                    <br>Double Commonwealth Games Champion</br></h6>
+                                                        class="fontbold">Toby Garbett</span>
+                                                    <br>Double Olympic and Double World</br></h6>
                                             </div>
-                                            <div class="sportsmens_biography">Having won medals in
-                                                weightlifting
-                                                from a very young age
-                                                Michaela went on to become Double Commonwealth Games
-                                                Champion
-                                                and was awarded the MBE in the
-                                                2011 Honours list.
+                                            <div class="sportsmens_biography">Upon retirement from
+                                                rowing Toby
+                                                refocused his goals and gained GB Vests in Triathlon
+                                                going on to
+                                                become the National AG Champion.
                                             </div>
 
 
@@ -374,7 +372,7 @@
                                                 <h6 class="sportsmen_subheader"><span
                                                         class="fontbold">Martyn Bernard</span>
                                                     <br>One of the most successful British
-                                                    High Jumper ever</br></h6>
+                                                    High Jumpers ever</br></h6>
                                             </div>
                                             <div class="sportsmens_biography">An Olympic Finalist,
                                                 European and
@@ -424,20 +422,22 @@
 
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/toby.jpg"
+                                            <img class="photo_size" src="src/image/michaela.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="sportsmens_title">
                                                 <h6 class="sportsmen_subheader"><span
-                                                        class="fontbold">Toby Garbett</span>
-                                                    <br>Double Olympic and Double World</br></h6>
+                                                        class="fontbold">Michaela Breeze</span>
+                                                    <br>Double Commonwealth Games Champion</br></h6>
                                             </div>
-                                            <div class="sportsmens_biography">Upon retirement from
-                                                rowing Toby
-                                                refocused his goals and gained GB Vests in Triathlon
-                                                going on to
-                                                become the National AG Champion.
+                                            <div class="sportsmens_biography">Having won medals in
+                                                weightlifting
+                                                from a very young age
+                                                Michaela went on to become Double Commonwealth Games
+                                                Champion
+                                                and was awarded the MBE in the
+                                                2011 Honours list.
                                             </div>
 
 
