--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                             <div class="sportsmens_title">
                                                 <h6 class="sportsmen_subheader"><span
                                                         class="fontbold">Jo Mersh</span>
-                                                    <br>Olympian and World Indoor Medalist</br></h6>
+                                                    <br>Olympian and World Indoor Medallist</br></h6>
                                             </div>
                                             <div class="sportsmens_biography">Jo excelled on the track
                                                 whilst
