Fix typo in word

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                             <div class="sportsmens_title">
                                                 <h6 class="sportsmen_subheader"><span
                                                         class="fontbold">Jo Mersh</span>
-                                                    <br>Olympian and World Indoor Medalist</br></h6>
+                                                    <br>Olympian and World Indoor Medallist</br></h6>
                                             </div>
                                             <div class="sportsmens_biography">Jo excelled on the track
                                                 whilst
@@ -728,7 +728,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 subscribe-text">
-                <h1 class="subscribe-text2">Subscribe now to get 30% discount</h1>
+                <h1 class="subscribe-text2">Subscribe now to get 25% discount</h1>
             </div>
             <div class="col-md-12 subscribe-button-padding">
                 <button class="button--default subscribe-button" href="#myModal" data-toggle="modal">Event Enquiry</button>
