--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 and Dad of 3 sports mad kids</br></h6>
                         </div>
                         <div class="sportsmens_biography">Brendan wears many hats when it comes to sports development.
-                            Brendan has delivered 100's of
+                            He has delivered 100's of
                             these School Sports Days over a 25 year period and is now helping other Olympians develop
                             their work in schools to inspire pupils nationwide.
                         </div>
@@ -433,8 +433,8 @@
                                             </div>
                                             <div class="sportsmens_biography">Having won medals in
                                                 weightlifting
-                                                from a very young age
-                                                Michaela went on to become Double Commonwealth Games
+                                                from a very young age,
+                                                Michaela went on to become a Double Commonwealth Games
                                                 Champion
                                                 and was awarded the MBE in the
                                                 2011 Honours list.
@@ -504,7 +504,7 @@
                                             </div>
                                             <div class="sportsmens_biography">Brendan wears many hats when it comes to
                                                 sports development.
-                                                Brendan has delivered 100's of
+                                                He has delivered 100's of
                                                 these School Sports Days over a 25 year period and is now helping other
                                                 Olympians develop
                                                 their work in schools to inspire pupils nationwide.
@@ -537,8 +537,8 @@
                                                     <br>Double Commonwealth Games Champion</br></h6>
                                             </div>
                                             <div class="sportsmens_biography">Having won medals in weightlifting
-                                                from a very young age
-                                                Michaela went on to become Double Commonwealth Games Champion
+                                                from a very young age,
+                                                Michaela went on to become a Double Commonwealth Games Champion
                                                 and was awarded the MBE in the
                                                 2011 Honours list.
                                             </div>
