--- a/index.html
+++ b/index.html
@@ -325,9 +325,8 @@
                                                     <br>Triple Olympic diver and Silver medallist
                                                     from the 2004 Athens Games</br></h6>
                                             </div>
-                                            <div class="sportsmens_biography">Leon has transitioned into
-                                                commentary with the BBC and
-                                                successful author specialising in mentoring.
+                                            <div class="sportsmens_biography">Leon has transitioned into commentating
+                                                for the BBC and has become a successful author, specialising in mentoring.
                                             </div>
 
 
@@ -374,14 +373,11 @@
                                                     <br>One of the most successful British
                                                     High Jumpers ever</br></h6>
                                             </div>
-                                            <div class="sportsmens_biography">An Olympic Finalist,
-                                                European and
-                                                Commonwealth Games Medallist
-                                                with a best of 2m30cm. Martyn is a fine example of
-                                                having a plan
-                                                B away from the athletics
-                                                track. He graduated from…<span><a href="#martynmodal"
-                                                                                  data-toggle="modal"> Read more</a></span>
+                                            <div class="sportsmens_biography">
+                                                Martyn is an Olympic finalist as well as a Commonwealth games medallist with a personal best of 2.3m.
+                                                Martyn is the perfect example of having a ‘plan B’ away from the athletics track.
+                                                He…
+                                                <span><a href="#martynmodal" data-toggle="modal"> Read more</a></span>
                                             </div>
 
 
@@ -602,9 +598,8 @@
                                                     <br>Triple Olympic diver and Silver medallist
                                                     from the 2004 Athens Games</br></h6>
                                             </div>
-                                            <div class="sportsmens_biography">Leon has transitioned into
-                                                commentary with the BBC and
-                                                successful author specialising in mentoring.
+                                            <div class="sportsmens_biography">Leon has transitioned into commentating
+                                                for the BBC and has become a successful author, specialising in mentoring.
                                             </div>
 
 
@@ -634,12 +629,12 @@
                                                     <br>One of the most successful British
                                                     High Jumpers ever</br></h6>
                                             </div>
-                                            <div class="sportsmens_biography">An Olympic Finalist, European and
-                                                Commonwealth Games Medallist
-                                                with a best of 2m30cm. Martyn is a fine example of having a plan
-                                                B away from the athletics
-                                                track. He graduated from psychology…<span><a href="#martynmodal"
-                                                                                             data-toggle="modal"> Read more</a></span>
+                                            <div class="sportsmens_biography">Martyn is an Olympic finalist as well as a
+                                                Commonwealth games medallist with a personal best of 2.3m.
+                                                Martyn is the perfect example of having a ‘plan B’ away from the
+                                                athletics track He graduated…
+                                                <span><a href="#martynmodal"
+                                                         data-toggle="modal"> Read more</a></span>
                                             </div>
 
 
@@ -1081,10 +1076,9 @@
                             <br>One of the most successful British
                             High Jumper ever</br></h6>
                     </div>
-                    <div class="sportsmens_modal-biography">An Olympic Finalist, European and Commonwealth Games
-                        Medallist
-                        with a
-                        best of 2m30cm. Martyn is a fine example of having a plan B away from the athletics track.
+                    <div class="sportsmens_modal-biography">
+                        Martyn is an Olympic finalist as well as a Commonwealth games medallist with a personal best of 2.3m.
+                        Martyn is the perfect example of having a ‘plan B’ away from the athletics track.
                         He graduated from psychology and has recently started a law degree. He has interests in film and
                         an
                         honorary director of the Film production Company, "21st Century Filmworks Ltd", A Fucilla
