--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                                 Matt Bowden
                                             </div>
                                             <div>
-                                                PE Teacher William Edwards School, Essex
+                                                PE Teacher, William Edwards School, Essex
                                             </div>
 
                                         </div>
@@ -208,7 +208,7 @@
             <div class="col-md-5 event_section-left">
                 <h3> What is Sports Stars Inspiration Day?</h3>
                 <div class="event_section-text">
-                    The Sport Stars Inspiration day is a time for pupils to raise their bar of aspiration and ambition.
+                    The Sport Stars Inspiration Day is a time for pupils to raise their bar of aspiration and ambition.
                     It is a time for pupils eyes to be opened to new goals and experience new challenges led
                     by our team of Olympians.
                 </div>
