--- a/platform.html
+++ b/platform.html
@@ -145,7 +145,7 @@
                                     Matt Bowden
                                 </div>
                                 <div>
-                                    PE Teacher William Edwards School, Essex
+                                    PE Teacher, William Edwards School, Essex
                                 </div>
                             </div>
                         </div>
@@ -538,7 +538,7 @@
                             Matt Bowden
                         </div>
                         <div>
-                            PE Teacher William Edwards School, Essex
+                            PE Teacher, William Edwards School, Essex
                         </div>
 
                     </div>
