Fixed Squad In Touch

--- a/platform.html
+++ b/platform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Squad In touch</title>
+    <title>Squad In Touch</title>
     <link rel="stylesheet" href="dist/style.css" type="text/css"/>
 </head>
 
@@ -103,7 +103,7 @@
                         <div class="slider_content-bottom hidden-xs">
 
                             <p>
-                                "Squad in Touch provides everything we need to organise school teams and clubs easily.
+                                "Squad In Touch provides everything we need to organise school teams and clubs easily.
                                 Anything that is not a feature can be sorted out effectively and the support
                                 we have been given setting this up has been great.
                                 This really is one of the best platforms out there to promote school sport and the time
@@ -606,7 +606,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2 contacts-margin">
-                <div class="fontbold">Squad in Touch Ltd</div>
+                <div class="fontbold">Squad In Touch Ltd</div>
                 <div>Pacific House, 382
                     Kenton Road Harrow
                     Middlesex, HA3 8DP
@@ -707,7 +707,7 @@
                 <!-- Основное содержимое модального окна -->
                 <div class="testimonials-title sportsmens_title">
                     <h4>Sir John Talbot's School</h4></div>
-                <div class="sportsmens_modal-biography">"Squad in Touch provides everything we need to organise school teams and clubs easily.
+                <div class="sportsmens_modal-biography">"Squad In Touch provides everything we need to organise school teams and clubs easily.
                     Anything that is not a feature can be sorted out effectively and the support we have
                     been
                     given setting this up has been great...
